# batch-processor

./: .black  .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
batch_processor/: __main__.py
docs/: conf.py  index.rst
tests/: f_test.py  version_test.py
