[project]
name = "batch-processor"
version = "0.1.0"
description = "Batch Processing utility using AWS Lambda"
authors = [
    {name = "Zybe"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
