[project]
name = "batch-processor"
version = "0.1.0"
description = "Batch Processing utility using AWS Lambda"
authors = [
    {name = "Zybe"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "types-mock (>=5.2.0.20250924,<6.0.0.0)",
    "types-setuptools (>=80.9.0.20250822,<81.0.0.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "tox (>=4.32.0,<5.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-runner (>=6.0.1,<7.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
